fixes for api doc
