# app/Http/Controllers/Controller.php
@@ -8,6 +8,12 @@ use OpenApi\Attributes as OA;
     title: 'Petshop API Documentation',
     version: '0.0.1'
 )]
+#[OA\SecurityScheme(
+    securityScheme: 'bearerAuth',
+    type: 'http',
+    scheme: 'bearer',
+    bearerFormat: 'JWT'
+)]
 abstract class Controller
 {
     //
