# app/Http/Controllers/ProductController.php
@@ -20,6 +20,7 @@ class ProductController extends Controller
         path: '/api/v1/products',
         summary: 'List all products',
         tags: ['Products'],
+        security: [['bearerAuth' => []]],
         parameters: [
             new OA\Parameter(name: 'page', in: 'query', schema: new OA\Schema(type: 'integer')),
             new OA\Parameter(name: 'limit', in: 'query', schema: new OA\Schema(type: 'integer')),
@@ -27,13 +28,15 @@ class ProductController extends Controller
                 name: 'sort_by[field]',
                 description: 'Sort field',
                 in: 'query',
+                required: false,
                 schema: new OA\Schema(type: 'string'),
-                example: 'created_at'
+                example: 'price'
             ),
             new OA\Parameter(
                 name: 'sort_by[direction]',
                 description: 'Sort direction',
                 in: 'query',
+                required: false,
                 schema: new OA\Schema(type: 'string'),
                 example: 'desc'
             ),
@@ -41,6 +44,7 @@ class ProductController extends Controller
         responses: [
             new OA\Response(response: 200, description: 'OK'),
             new OA\Response(response: 401, description: 'Unauthorized'),
+            new OA\Response(response: 422, description: 'Unprocessed entity')
         ]
     )]
     public function index(ProductFilterRequest $request)
@@ -54,6 +58,20 @@ class ProductController extends Controller
         return ProductResource::collection($products);
     }
 
+    #[OA\Get(
+        path: '/api/v1/product/{uuid}',
+        summary: 'Fetch a product',
+        tags: ['Products'],
+        security: [['bearerAuth' => []]],
+        parameters: [
+            new OA\Parameter(name: 'uuid', in: 'path', schema: new OA\Schema(type: 'string'), required: true),
+        ],
+        responses: [
+            new OA\Response(response: 200, description: 'OK'),
+            new OA\Response(response: 401, description: 'Unauthorized'),
+            new OA\Response(response: 404, description: 'Not found'),
+        ]
+    )]
     public function show(Product $product)
     {
         return ProductResource::make($product->load('category'));
